maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:6: error: illegal start of simple pattern
      case 0 -> if(estFaceMur){()} else {avance()}
                ^RandomMouseMaze:9: error: '=>' expected but '}' found.
    }
    ^